--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <title>PBL Project</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-dark bg-dark">
   <div class="container-fluid">
-    <span class="navbar-brand mb-0 h1">Anemia Prevention Camp</span>
+    <span class="navbar-brand mb-0 h1">Anemia Awareness Camp</span>
+
+      <a class="nav-link" href="https://forms.gle/gAHM4TKMiaw9f8gi9">Take Survey</a>
+      <a class="nav-link" href="https://docs.google.com/spreadsheets/d/1pMrsC_MdWicNHpZB5Fc-PJqw-4j04zZSJpfRqB07p6w/edit?usp=sharing">See Survey Responses</a>
   </div>
 </nav>
-<img src="C:\Users\Anmol Gupta\Downloads\poster.jpg" class="img-fluid" alt="poster">
+<img src="poster.jpeg" class="img-fluid" >
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
